opt:支持仅有有参构造器的循环依赖注入